# winapi-app-template

./: CMakeLists.txt  main.cpp
include/: base_window.h  engine.h  window.h
source/: base_window.cpp  engine.cpp  window.cpp
